<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eppic-web</groupId>
	<artifactId>eppic</artifactId>
	<version>3.0.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>eppic-model</module>
		<module>eppic-cli</module>
		<module>eppic-wui</module>
		<module>eppic-dbtools</module>
	</modules>

	<name>eppic</name>
	<url>http://www.eppic-web.org</url>
	<description>Evolutionary Protein-Protein Interface Classifier</description>

	<scm>
		<url>https://github.com/eppic-team/eppic</url>
		<connection>scm:git:https://github.com/eppic-team/eppic.git</connection>
  </scm>

	<properties>
		<java.version>1.8</java.version>
		<gwt.version>2.7.0</gwt.version>
		<slf4j.version>1.7.22</slf4j.version>
		<log4j.version>2.7</log4j.version>		
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<hibernate.version>5.2.6.Final</hibernate.version>
		<hibernate.validator.version>5.3.4.Final</hibernate.validator.version>
		<mysql.connector.version>5.1.40</mysql.connector.version>
		<jgrapht.version>1.0.1</jgrapht.version>
		<gson.version>2.7</gson.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.8.1</version>
				<configuration>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>2.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>snapshots-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>

</project>
